{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 36,
  "lineage": "1830a39d-38dd-5243-1f49-636e48869567",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0223a8e60914ef1dc",
            "arn": "arn:aws:ec2:us-east-1:957014951663:elastic-ip/eipalloc-0223a8e60914ef1dc",
            "domain": "vpc",
            "id": "eipalloc-0223a8e60914ef1dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-29-232-132.compute-1.amazonaws.com",
            "public_ip": "100.29.232.132",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "secure-vpc"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0be6d2e91d339c",
            "arn": "arn:aws:ec2:us-east-1:957014951663:elastic-ip/eipalloc-00e0be6d2e91d339c",
            "domain": "vpc",
            "id": "eipalloc-00e0be6d2e91d339c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-107-26.compute-1.amazonaws.com",
            "public_ip": "54.225.107.26",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "secure-vpc"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:internet-gateway/igw-02bd95605a68fc322",
            "id": "igw-02bd95605a68fc322",
            "owner_id": "957014951663",
            "tags": {
              "Name": "secure-vpc-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-igw-dev",
              "Project": "secure-vpc"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0223a8e60914ef1dc",
            "association_id": "eipassoc-0edf9b16c57fdc359",
            "connectivity_type": "public",
            "id": "nat-0103cabb88bda5666",
            "network_interface_id": "eni-04dc54a3bdef956c6",
            "private_ip": "10.0.1.238",
            "public_ip": "100.29.232.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4d8c2d361d10f9b",
            "tags": {
              "Name": "secure-vpc-nat-1-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-nat-1-dev",
              "Project": "secure-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0be6d2e91d339c",
            "association_id": "eipassoc-0d406e45e3578aea8",
            "connectivity_type": "public",
            "id": "nat-030fa53dc4560ff08",
            "network_interface_id": "eni-06feb6c4c7c7a7935",
            "private_ip": "10.0.2.183",
            "public_ip": "54.225.107.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1bcd19d39cd4a84",
            "tags": {
              "Name": "secure-vpc-nat-2-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-nat-2-dev",
              "Project": "secure-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:network-acl/acl-0e815c1a2ee263087",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e815c1a2ee263087",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "957014951663",
            "subnet_ids": [
              "subnet-0c3953df16ba17246",
              "subnet-0f0464f3cd17eeafc"
            ],
            "tags": {
              "Name": "secure-vpc-database-nacl"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-database-nacl",
              "Project": "secure-vpc"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:network-acl/acl-0e17fb447cd881579",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e17fb447cd881579",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "957014951663",
            "subnet_ids": [
              "subnet-0b1bcd19d39cd4a84",
              "subnet-0e4d8c2d361d10f9b"
            ],
            "tags": {
              "Name": "secure-vpc-public-nacl"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-public-nacl",
              "Project": "secure-vpc"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-015620168b64911181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0103cabb88bda5666",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015620168b6491118",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04739c89d053092411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-030fa53dc4560ff08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04739c89d05309241",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02bd95605a68fc322",
            "id": "r-rtb-0ebd2f715f553c5c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ebd2f715f553c5c1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:route-table/rtb-005a248c81d9e8b0e",
            "id": "rtb-005a248c81d9e8b0e",
            "owner_id": "957014951663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "secure-vpc-database-rt-1-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-database-rt-1-dev",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:route-table/rtb-05e1ac53a0a6ac1ca",
            "id": "rtb-05e1ac53a0a6ac1ca",
            "owner_id": "957014951663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "secure-vpc-database-rt-2-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-database-rt-2-dev",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:route-table/rtb-015620168b6491118",
            "id": "rtb-015620168b6491118",
            "owner_id": "957014951663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "secure-vpc-private-rt-1-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-private-rt-1-dev",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:route-table/rtb-04739c89d05309241",
            "id": "rtb-04739c89d05309241",
            "owner_id": "957014951663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "secure-vpc-private-rt-2-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-private-rt-2-dev",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:route-table/rtb-0ebd2f715f553c5c1",
            "id": "rtb-0ebd2f715f553c5c1",
            "owner_id": "957014951663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "secure-vpc-public-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-public-rt-dev",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd9f1b0554161664",
            "route_table_id": "rtb-005a248c81d9e8b0e",
            "subnet_id": "subnet-0c3953df16ba17246"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002a771ec4bb7211d",
            "route_table_id": "rtb-05e1ac53a0a6ac1ca",
            "subnet_id": "subnet-0f0464f3cd17eeafc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326e112e0b99d0cd",
            "route_table_id": "rtb-015620168b6491118",
            "subnet_id": "subnet-072fa21d5e4018afc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee0aa2e8c2021ae",
            "route_table_id": "rtb-04739c89d05309241",
            "subnet_id": "subnet-080a921f7d7877cce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e60304c63ec72baf",
            "route_table_id": "rtb-0ebd2f715f553c5c1",
            "subnet_id": "subnet-0e4d8c2d361d10f9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdd8090d53c891d2",
            "route_table_id": "rtb-0ebd2f715f553c5c1",
            "subnet_id": "subnet-0b1bcd19d39cd4a84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:security-group/sg-07f137fcb12b664df",
            "description": "Allow HTTP/HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f137fcb12b664df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "secure-vpc-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "957014951663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secure-vpc-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-alb-sg",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:security-group/sg-0184e924dde7cefdc",
            "description": "Allow traffic only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0184e924dde7cefdc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f137fcb12b664df"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "secure-vpc-app-sg-dev",
            "name_prefix": "",
            "owner_id": "957014951663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secure-vpc-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-app-sg",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:security-group/sg-0bad590c42551f693",
            "description": "Allow PostgreSQL only from App tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bad590c42551f693",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from App",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0184e924dde7cefdc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "secure-vpc-db-sg-dev",
            "name_prefix": "",
            "owner_id": "957014951663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secure-vpc-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-db-sg",
              "Project": "secure-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:subnet/subnet-0c3953df16ba17246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3953df16ba17246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957014951663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure-vpc-database-1-dev",
              "Tier": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-database-1-dev",
              "Project": "secure-vpc",
              "Tier": "Database"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:subnet/subnet-0f0464f3cd17eeafc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0464f3cd17eeafc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957014951663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure-vpc-database-2-dev",
              "Tier": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-database-2-dev",
              "Project": "secure-vpc",
              "Tier": "Database"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:subnet/subnet-072fa21d5e4018afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072fa21d5e4018afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957014951663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure-vpc-private-1-dev",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-private-1-dev",
              "Project": "secure-vpc",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:subnet/subnet-080a921f7d7877cce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080a921f7d7877cce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957014951663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure-vpc-private-2-dev",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-private-2-dev",
              "Project": "secure-vpc",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:subnet/subnet-0e4d8c2d361d10f9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4d8c2d361d10f9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957014951663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure-vpc-public-1-dev",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-public-1-dev",
              "Project": "secure-vpc",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:subnet/subnet-0b1bcd19d39cd4a84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1bcd19d39cd4a84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957014951663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secure-vpc-public-2-dev",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-public-2-dev",
              "Project": "secure-vpc",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0860edd0252661ade"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957014951663:vpc/vpc-0860edd0252661ade",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ddc27e931dcb7e5f",
            "default_route_table_id": "rtb-0c5cd957ed3b80e0e",
            "default_security_group_id": "sg-0218ffeaebc79148c",
            "dhcp_options_id": "dopt-0d96c338ec2fd9aed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0860edd0252661ade",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5cd957ed3b80e0e",
            "owner_id": "957014951663",
            "tags": {
              "Name": "secure-vpc-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "secure-vpc-vpc-dev",
              "Project": "secure-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}